# gmail-spam-delete-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cleanup.yml
src/gmail_spam_delete_agent/: __init__.py  cli_clean_inbox_swarm.py  cli_gmail_auth.py  delete.py  gmail_auth.py  gmail_custom_tools.py  models.py  prompts.py  swarm_app.py
src/gmail_spam_delete_agent/scripts/: delete_promotional_emails.py
